--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="contact-icons">
                     <a href="tel:+919619915607" aria-label="Call Trushil">📞</a> <!-- Replace with actual icons later -->
                     <a href="mailto:trushilr@gmail.com" aria-label="Email Trushil">📧</a>
-                    <a href="https://linkedin.com/in//" target="_blank" rel="noopener noreferrer" aria-label="Trushil's LinkedIn">🔗</a>
+                    <a href="https://www.linkedin.com/in/trushil-raval-581a1330b/" target="_blank" rel="noopener noreferrer" aria-label="Trushil's LinkedIn">🔗</a>
                 </div>
             </div>
         </section>
