--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div class="contact-links">
                     <a href="tel:+16824567900">Call Me</a>
                     <a href="mailto:trushilr@gmail.com">Email Me</a>
-                    <a href="https://linkedin.com/in//" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/trushil-raval-581a1330b/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 </div>
             </div>
         </section>
