--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="experience-item">
                     <h3>Self-employed | YouTube Channel Advisor <span class="date">October 2016 - March 2022</span></h3>
                     <ul>
-                        <li>Managed a YouTube channel, achieving 75 million views, by implementing data-driven audience targeting.</li>
+                        <li>Managed a YouTube channel, now rewarded with a silver play button, achieving 75 million views, by implementing data-driven audience targeting.</li>
                         <li>Stayed updated on industry trends, platform updates, and best practices through continuous learning.</li>
                     </ul>
                 </div>
