--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <div class="container">
                 <h2>About Me</h2>
                 <p>
-                    To leverage my strong foundation in technology and user experience design, combined with expertise in software
+                    My goal is to leverage my strong foundation in technology and user experience design, combined with expertise in software
                     engineering and business management, to drive innovative and secure solutions in any industry ethically.
                 </p>
             </div>
