--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 <div class="education-item">
                     <h3>DSR International School <span class="date">2022 – 2024</span></h3>
                     <p>Cambridge AS and A Levels - Physics, Chemistry, IT, English, and Mathematics</p>
-            
+                </div>
                  <section id="education" class="fade-in-section">
             <div class="container">
                     <h3>University of Texas at San Antonio <span class="date">2022 – 2024</span></h3>
