--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                     <h3>DSR International School <span class="date">2022 – 2024</span></h3>
                     <p>Cambridge AS and A Levels - Physics, Chemistry, IT, English, and Mathematics</p>
             <div class="container">
-                    <h3>University of Texas at San Antonio <span class="date">2022 – 2024</span></h3>
+                    <h4>University of Texas at San Antonio <span class="date">2022 – Present</span></h3>
                     <p>Bachelor's in Computer Science</p>
                 </div>
             </div>
