--- a/index.html
+++ b/index.html
@@ -506,10 +506,12 @@
                     <h3>DSR International School <span class="date">2022 – 2024</span></h3>
                     <p>Cambridge AS and A Levels - Physics, Chemistry, IT, English, and Mathematics</p>
             <div class="container">
+                <div class="education-item">
                     <h3>University of Texas at San Antonio <span class="date">2022 – Present</span></h3>
                     <p>Bachelor's in Computer Science</p>
+
+                   </div>
                 </div>
-            </div>
             </div>
         </section>
 
